--- a/server/views/page/add.ejs
+++ b/server/views/page/add.ejs
@@ -39,6 +39,7 @@
 
             <button type="button" id="addQuestion" class="btn btn-primary">Add Question</button>
             <button type="submit" class="btn btn-primary">Submit</button>
+            <a href="javascript:history.go(-1);" class="btn btn-warning">Cancel</a>
           </form>
         </div>
       </div>
