--- a/server/views/page/edit.ejs
+++ b/server/views/page/edit.ejs
@@ -61,6 +61,7 @@
 
         <button type="button" id="addQuestion" class="btn btn-primary">Add Question</button>
         <button type="submit" class="btn btn-primary">Update</button>
+        <a href="javascript:history.go(-1);" class="btn btn-warning">Cancel</a>
       </form>
     </div>
   </div>
